[gd_scene load_steps=14 format=3 uid="uid://5d5pp3upu1dv"]

[ext_resource type="Texture2D" uid="uid://653aehdcvwep" path="res://Sprites/Kaefig_bg.png" id="1_bcomd"]
[ext_resource type="Script" uid="uid://dygcd4ocii377" path="res://Pickups/caged_baby_lizard.gd" id="1_h1yy6"]
[ext_resource type="PackedScene" uid="uid://jghk56gro5k0" path="res://Pickups/babyLizard.tscn" id="2_h1yy6"]
[ext_resource type="AudioStream" uid="uid://de3wmkt8hop8t" path="res://Sounds/cage breaking.mp3" id="2_t8tno"]
[ext_resource type="Texture2D" uid="uid://b6iph6qtctisq" path="res://Sprites/Kaefig_fg.png" id="3_t8tno"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yot6h"]
atlas = ExtResource("1_bcomd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sgmn"]
atlas = ExtResource("1_bcomd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tj4r2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yot6h")
}],
"loop": true,
"name": &"broken",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sgmn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mwnu7"]
atlas = ExtResource("3_t8tno")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg0dx"]
atlas = ExtResource("3_t8tno")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fu282"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwnu7")
}],
"loop": true,
"name": &"broken",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg0dx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1yy6"]
size = Vector2(33, 51)

[sub_resource type="CircleShape2D" id="CircleShape2D_h1yy6"]

[node name="CagedBabyLizard" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 20
collision_mask = 62
script = ExtResource("1_h1yy6")
break_sfx = ExtResource("2_t8tno")

[node name="cageBack" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tj4r2")

[node name="BabyLizard" parent="." node_paths=PackedStringArray("cage") instance=ExtResource("2_h1yy6")]
position = Vector2(0, -5)
cage = NodePath("..")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fu282")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1.5)
shape = SubResource("RectangleShape2D_h1yy6")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 20
collision_mask = 9

[node name="col" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_h1yy6")
